[gd_scene load_steps=9 format=3 uid="uid://dc63egb7vfe03"]

[ext_resource type="Script" path="res://scenes/entities/player/player.gd" id="1_scu18"]
[ext_resource type="PackedScene" uid="uid://cre4yfp4yuh" path="res://scenes/entities/player/fps_arms.tscn" id="2_gf3du"]
[ext_resource type="Script" path="res://scenes/entities/player/interaction/player_interaction_handler.gd" id="3_oriau"]
[ext_resource type="PackedScene" uid="uid://bv8fraojrdvf" path="res://scenes/components/equipment_component.tscn" id="4_momwo"]
[ext_resource type="PackedScene" uid="uid://b04m8vnyl60ua" path="res://scenes/entities/player/arms_2.tscn" id="4_n8275"]
[ext_resource type="PackedScene" uid="uid://calwupcbsccj3" path="res://scenes/components/health_component.tscn" id="6_08ryp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bnonn"]
height = 1.75

[sub_resource type="SphereShape3D" id="SphereShape3D_is3fp"]
radius = 2.0

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("health_component", "equipment_component") groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_scu18")
health_component = NodePath("HealthComponent")
equipment_component = NodePath("Head/SubViewportContainer/SubViewport/EquipCam/EquipmentComponent")

[node name="PlayerCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("CapsuleShape3D_bnonn")

[node name="ColAboveDetectRay" type="RayCast3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, -2, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 3

[node name="StairsBelowRaycast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -3.55271e-15, 0, 3.55271e-15, 1, 0.000877023, -1, 0.00293314)
target_position = Vector3(0, -0.75, 0)

[node name="StairsAheadRaycast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0.000877023, -0.451593, -0.797067)
target_position = Vector3(0, 0.55, 0)

[node name="InteractionHandler" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_oriau")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionHandler"]
shape = SubResource("SphereShape3D_is3fp")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
unique_name_in_owner = true
cull_mask = 1048573
current = true

[node name="Arms" parent="Head/Camera3D" instance=ExtResource("2_gf3du")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, -0.035, -2.2, 0.075)

[node name="Arms_2" parent="Head/Camera3D" instance=ExtResource("4_n8275")]
transform = Transform3D(-0.834093, -0.215405, -0.507829, -0.538349, 0.518624, 0.664237, 0.120292, 0.827424, -0.548544, 0.341123, -1.66157, -1.58642)

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="EquipCam" type="Camera3D" parent="Head/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
cull_mask = 2

[node name="EquipmentComponent" parent="Head/SubViewportContainer/SubViewport/EquipCam" instance=ExtResource("4_momwo")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.522094, -0.359155, -0.744464)

[node name="HealthComponent" parent="." instance=ExtResource("6_08ryp")]

[connection signal="pda_use" from="." to="Head/Camera3D/Arms" method="_on_player_pda_use"]
[connection signal="body_entered" from="InteractionHandler" to="InteractionHandler" method="OnOnjectEnteredArea"]
[connection signal="body_exited" from="InteractionHandler" to="InteractionHandler" method="OnObjectExitedArea"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
